# rllm

./: .gitignore  .gitmodules  Dockerfile  docker-compose.yaml  pyproject.toml
examples/dualrag/: metrics.py  prepare_rag_data.py  run_rag_flow.py  run_rag_flow.sh  train_rag_flow.py  train_rag_flow.sh
examples/dualrag/flow/: dualrag.py  nativerag.py  prompt.yaml
examples/dualrag/server/local/: api_local.py
examples/dualrag/server/web/: api_web.py  test.py  wikipedia_search_server.py  wikipedia_search_worker.py
examples/dualrag/utils/: __init__.py  log.py
examples/math_tool/: train_math_with_tool.sh
examples/search/: local_retrieval_tool.py  run_search_agent.py  train_search_agent.py  train_search_agent.sh
rllm/data/: trans.py
rllm/engine/: agent_workflow_engine.py
rllm/trainer/: agent_trainer.py
scripts/: show_jsonlooger.sh
